# papylio_kers

./: .gitattributes  .gitignore  .readthedocs.yaml  Example.py  ExampleMDthuis.py  Example_SHK.py  GUI.py  GUI_new.py  ImageCollection.py  Jacob_sandbox.py  Libraries.cmd  Make_executable.cmd  Mapping.py  README.md  Run_interactiveAnalysis.py  Sequencing_setup.cmd  Sequencing_setup.sh  Setup.cmd  Setup.command  Start GUI.cmd  Start GUI.command  Start GUI.py  Start UI.cmd  UI.py  Update N drive code.cmd  Update environment.cmd  Update.cmd  Update.command  analyze_label.py  applyMapping.py  applyMapping_v2.py  applyMapping_v3.py  applyMapping_v3basic.py  applyMapping_v4.py  applyTraceAnalysisCode.py  applyTraceAnalysisCode_MD.py  autoThreshold.py  config.yml  cursor_matplotlib.py  distributionPlot.py  (+25 more)
autopick/: compare_tetra_2_bead.py  do_before.py  kaze_match.py  pick_spots.py  pick_spots_akaze.py  pick_spots_akaze_ALL.py  pick_spots_akaze_final.py  pick_spots_akaze_manual.py  pick_spots_akaze_v2.py  pick_spots_akaze_v3.py
compare trace Matlab-python/: Trace.m
docs/: 01_getting_started.ipynb  API reference.rst  Contributing.rst  GUI.rst  Getting started.rst  Installation.rst  Main classes.rst  Make_html_and_copy_to_M.cmd  conf.py  config.yml  getting_started.ipynb  index.rst  modules.rst  requirements.txt  trace_analysis.analysis.rst  trace_analysis.autopick.rst  trace_analysis.find_xy_position.rst  trace_analysis.image_adapt.rst  trace_analysis.rst
find_xy_position/: Gaussian.py  pynput_keyboard.py  pynput_keyboard1.py  sine_update_plot.py  xy_position.py
image_adapt/: Image.py  ImageCollection.py  Mapping.py  analyze_label.py  distance_calculation.py  find_threshold.py  load_file.py  movie.py  pma_file.py  polywarp.py  rolling_ball.py  sifreaderA.py
mapping/: icp.py  icp_nonrigid.py
matchpoint/: environment.yml  pyproject.toml
matchpoint/docs/: API reference.rst  Getting started.rst  conf.py
matchpoint/matchpoint/: core.py  geometricHashing.py  geometric_hashing.py  kernel_correlation.py  mapping.py
matchpoint/tests/integration/: test_mapping.py
miscellaneous/: README.md  jacob_edu.ipynb  jacob_tools.py
papilio/: __init__.py  autoconfig.py  background_subtraction.py  coordinate_optimization.py  default_configuration.yml  experiment.py  file.py  file_collection.py  molecule.py  netcdf_operations.py  peak_finding.py  plotting.py  plugin_manager.py  trace_correction.py  trace_extraction.py  trace_plot.py
papylio/: __init__.py  __main__.py  autoconfig.py  background_subtraction.py  bogus_jk.py  coordinate_optimization.py  experiment.py  file.py  file_collection.py  log_functions.py  molecule.py  peak_finding.py  plotting.py  plugin_manager.py  timer.py  trace_correction.py  trace_extraction.py  trace_plot.py
sequence_analysis/: Align_string.awk  Analysis.cmd  Analysis.sh  Extract_section.awk  Reference.fasta  Sequencing_setup.cmd  Sequencing_setup.sh  sequencing_environment.yml
(+266 files in other folders)
