# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matchpoint"
version = "0.1.0"
description = "Use methods and method chaining on lists of objects."
readme = "README.md"
authors = [{ name = "Ivo Severins", email = "i.w.h.severins@tudelft.nl" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
keywords = ["object", "list", "method", "chaining"]
dependencies = [
    "numpy >= 1.22",
	"matplotlib >= 3.5",
	"pathlib2",
	"pyyaml>=6.0",
	"scikit-image>=0.19",
	"scipy>=1.8",
	"scikit-learn>=1.0",
	"shapely=1.8",
	"tqdm"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ivoseverins/matchpoint"

[project.optional-dependencies]
dev = ["pytest","pytest-datadir","build","twine","sphinx","sphinx-book-theme"]

[tool.pytest.ini_options]
pythonpath = ["matchpoint/matchpoint"]
testpaths = [
    "tests",
    "integration",
]